--- a/Acquisition/Interface/CMakeLists.txt
+++ b/Acquisition/Interface/CMakeLists.txt
@@ -1,5 +1,6 @@
-#@author S. V. Paulauskas
-include_directories(include)
+# @file CMakeLists.txt
+# @author S. V. Paulauskas
+# @date Updated August 11, 2018
 add_subdirectory(source)
 
 if(PAASS_BUILD_TESTS)
