--- a/Acquisition/MCA/source/CMakeLists.txt
+++ b/Acquisition/MCA/source/CMakeLists.txt
@@ -1,9 +1,9 @@
 # @authors K. Smith
 
-add_executable(MCA MCA_exec.cpp MCA.cpp MCA_ROOT.cpp)
-target_link_libraries(MCA PixieInterface Utility Pugixml PaassResourceStatic ${ROOT_LIBRARIES})
-install(TARGETS MCA DESTINATION bin)
+add_executable(mca mcaMain.cpp Mca.cpp McaRoot.cpp)
+target_link_libraries(mca PixieInterface Utility Pugixml PaassResourceStatic ${ROOT_LIBRARIES})
+install(TARGETS mca DESTINATION bin)
 
-set(MCA_LIB_SOURCES MCA.cpp MCA_ROOT.cpp)
-add_library(MCA_LIBRARY STATIC ${MCA_LIB_SOURCES})
-target_link_libraries(MCA_LIBRARY PixieInterface Utility Pugixml PaassResourceStatic ${ROOT_LIBRARIES})
+set(MCA_LIB_SOURCES Mca.cpp McaRoot.cpp)
+add_library(McaLibrary STATIC ${MCA_LIB_SOURCES})
+target_link_libraries(McaLibrary PixieInterface Utility Pugixml PaassResourceStatic ${ROOT_LIBRARIES})
