Massive functional updates
We now use the AcquisitionInterface base class for everything. Let's us toggle between using the EmulatedInterface and PixieInterface. 

Cleaned up a crap ton of useless code and pulled things closer to our standards. 

Removed versioning since that's project wide now.

Updated MCA classes so that they call the right classes now. 

Removed some unused variables

Updated Initialize so that we can specify the configuration file. 

Updated cmake so that we use the right MCA library. Remoed the pixie support library since it's included with the PixieInterface library. 

Added the -c and -e flags to handle configuration file and emulated interface

wrapped things in trys, and added in a bunch of throws. This lets the program exit cleanly when we have an error during initialization. 

Moved set fifo threshold settings to poll class, cleans up a header from the main file. 

updated null definitions to nullptr

--- a/Acquisition/Poll/source/CMakeLists.txt
+++ b/Acquisition/Poll/source/CMakeLists.txt
@@ -2,7 +2,7 @@
 
 set(POLL2_SOURCES poll2.cpp poll2_core.cpp poll2_stats.cpp)
 add_executable(poll2 ${POLL2_SOURCES})
-target_link_libraries(poll2 PixieInterface PixieSupport Utility MCA_LIBRARY ${CMAKE_THREAD_LIBS_INIT})
+target_link_libraries(poll2 PixieInterface Utility McaLibrary ${CMAKE_THREAD_LIBS_INIT})
 install(TARGETS poll2 DESTINATION bin)
 
 set(LISTENER_SOURCES listener.cpp)
