Updating Setup programs to use the proper interface calls

--- a/Acquisition/Setup/source/CMakeLists.txt
+++ b/Acquisition/Setup/source/CMakeLists.txt
@@ -6,14 +6,11 @@ set(SETUP_UTILS adjust_offsets find_tau copy_params pread pwrite pmread pmwrite
 
 foreach (UTIL ${SETUP_UTILS})
     add_executable(${UTIL} ${UTIL}.cpp)
-    target_link_libraries(${UTIL} PixieSupport PixieInterface) # The order matters here! CRT
+    target_link_libraries(${UTIL} PixieInterface Pugixml PaassResourceStatic)
 endforeach (UTIL)
 
 install(TARGETS ${SETUP_UTILS} DESTINATION bin)
 
-if (ROOT_FOUND)
-    add_executable(paramScan paramScan.cpp)
-    target_link_libraries(paramScan PixieInterface MCA_LIBRARY ${ROOT_LIBRARIES}
-            "-lSpectrum")
-    install(TARGETS paramScan DESTINATION bin)
-endif (ROOT_FOUND)
+add_executable(paramScan paramScan.cpp)
+target_link_libraries(paramScan PixieInterface McaLibrary Pugixml ${ROOT_LIBRARIES} "-lSpectrum")
+install(TARGETS paramScan DESTINATION bin)
