--- a/Acquisition/CMakeLists.txt
+++ b/Acquisition/CMakeLists.txt
@@ -22,6 +22,6 @@ if(PAASS_BUILD_ANALYSIS)
 endif(PAASS_BUILD_ANALYSIS)
 
 #Build the setup tools
-if (PAASS_BUILD_SETUP AND PAASS_BUILD_XIA_INTERFACE)
+if (PAASS_BUILD_SETUP)
     add_subdirectory(Setup)
-endif (PAASS_BUILD_SETUP AND PAASS_BUILD_XIA_INTERFACE)
+endif (PAASS_BUILD_SETUP)
