--- a/Acquisition/Interface/tests/CMakeLists.txt
+++ b/Acquisition/Interface/tests/CMakeLists.txt
@@ -8,5 +8,5 @@
 add_executable(unittest-AcquisitionConfig unittest-AcquisitionConfig.cpp ../source/AcquisitionConfig.cpp)
 target_include_directories(unittest-AcquisitionConfig PUBLIC BEFORE ../include/ PUBLIC BEFORE
         ${CMAKE_SOURCE_DIR}/Core/include ${CMAKE_SOURCE_DIR}/Resources/include)
-target_link_libraries(unittest-AcquisitionConfig UnitTest++ PaassCoreStatic Pugixml PaassResourceStatic)
+target_link_libraries(unittest-AcquisitionConfig UnitTest++ PaassCoreStatic PaassResourceStatic)
 add_test(NAME AcquisitionConfig COMMAND unittest-AcquisitionConfig WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR})
