Fixing inconsistencies in CMake scripts that was killing builds.

--- a/Analysis/CMakeLists.txt
+++ b/Analysis/CMakeLists.txt
@@ -9,8 +9,7 @@ if (${GSL_VERSION} LESS 2.0)
     add_definitions("-D GSL_VERSION_ONE")
 endif (${GSL_VERSION} LESS 2.0)
 
-#Everything below is dependent on these two sets of libaries so we include the
-#headers.
+#Everything below is dependent on these two sets of libaries so we include the headers.
 include_directories(Resources/include)
 include_directories(ScanLibraries/include)
 
@@ -21,8 +20,7 @@ if (PAASS_USE_HRIBF)
 
     enable_language(Fortran)
 
-    #If we are using HRIBF interface we need to include the ScanorInterface header
-    #	for the following code.
+    #If we are using HRIBF interface we need to include the ScanorInterface header for the following code.
     include_directories(Scanor/include)
     add_subdirectory(Scanor)
 endif (PAASS_USE_HRIBF)
@@ -34,12 +32,7 @@ add_subdirectory(Resources)
 #Build utilities.
 add_subdirectory(Utilities)
 
-if(ROOT_FOUND)
-    option(PAASS_BUILD_UTKSCAN "Build utkscan" OFF)
-
-    if (PAASS_BUILD_UTKSCAN)
-        add_subdirectory(Utkscan)
-    endif (PAASS_BUILD_UTKSCAN)
-else()
-    message(WARNING "utkscan is unavilable unless you install ROOT!!")
-endif(ROOT_FOUND)
+option(PAASS_BUILD_UTKSCAN "Build utkscan" OFF)
+if (PAASS_BUILD_UTKSCAN)
+    add_subdirectory(Utkscan)
+endif (PAASS_BUILD_UTKSCAN)
