--- a/Analysis/Utkscan/processors/source/CMakeLists.txt
+++ b/Analysis/Utkscan/processors/source/CMakeLists.txt
@@ -1,24 +1,8 @@
 # @authors S. V. Paulauskas
-set(PROCESSOR_SOURCES
-        BetaScintProcessor.cpp
-        DoubleBetaProcessor.cpp
-        CloverCalibProcessor.cpp
-        CloverProcessor.cpp
-        DssdProcessor.cpp
-        EventProcessor.cpp
-        GeProcessor.cpp
-        Hen3Processor.cpp
-        ImplantSsdProcessor.cpp
-        IonChamberProcessor.cpp
-        LiquidScintProcessor.cpp
-        LitePositionProcessor.cpp
-        LogicProcessor.cpp
-        McpProcessor.cpp
-        NeutronScintProcessor.cpp
-        PositionProcessor.cpp
-        PspmtProcessor.cpp
-        TeenyVandleProcessor.cpp
-        TemplateProcessor.cpp
-        VandleProcessor.cpp)
+set(PROCESSOR_SOURCES BetaScintProcessor.cpp DoubleBetaProcessor.cpp CloverCalibProcessor.cpp CloverProcessor.cpp
+        DssdProcessor.cpp EventProcessor.cpp GeProcessor.cpp Hen3Processor.cpp ImplantSsdProcessor.cpp
+        IonChamberProcessor.cpp LiquidScintProcessor.cpp LitePositionProcessor.cpp LogicProcessor.cpp McpProcessor.cpp
+        NeutronScintProcessor.cpp PositionProcessor.cpp PspmtProcessor.cpp TeenyVandleProcessor.cpp
+        TemplateProcessor.cpp VandleProcessor.cpp)
 
 add_library(UtkscanProcessorObjects OBJECT ${PROCESSOR_SOURCES})
