--- a/Resources/tests/CMakeLists.txt
+++ b/Resources/tests/CMakeLists.txt
@@ -5,8 +5,7 @@ target_link_libraries(unittest-HelperFunctions UnitTest++)
 install(TARGETS unittest-HelperFunctions DESTINATION bin/unittests)
 add_test(HelperFunctions unittest-HelperFunctions)
 
-add_executable(unittest-StringManipulationFunctions
-        unittest-StringManipulationFunctions.cpp)
+add_executable(unittest-StringManipulationFunctions unittest-StringManipulationFunctions.cpp)
 target_link_libraries(unittest-StringManipulationFunctions UnitTest++)
 install(TARGETS unittest-StringManipulationFunctions DESTINATION bin/unittests)
 add_test(StringManipulationFunctions unittest-StringManipulationFunctions)
