--- a/Analysis/Scanor/source/CMakeLists.txt
+++ b/Analysis/Scanor/source/CMakeLists.txt
@@ -5,15 +5,7 @@ if (${CMAKE_Fortran_COMPILER} MATCHES gfortran)
     set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -D LINK_GFORTRAN")
 endif (${CMAKE_Fortran_COMPILER} MATCHES gfortran)
 
-set(SCANOR_SOURCES
-        set2cc.f
-        messlog.f
-        mildatim.f
-        scanor.f
-        ScanorInterface.cpp
-        Scanor.cpp
-        GetArguments.cpp
-        )
+set(SCANOR_SOURCES set2cc.f messlog.f mildatim.f scanor.f ScanorInterface.cpp Scanor.cpp GetArguments.cpp)
 
 add_library(ScanorObjects OBJECT ${SCANOR_SOURCES})
 
