--- a/Analysis/Utkscan/core/source/CMakeLists.txt
+++ b/Analysis/Utkscan/core/source/CMakeLists.txt
@@ -1,32 +1,11 @@
 # @author S. V. Paulauskas
-set(CORE_SOURCES
-        BarBuilder.cpp
-        Calibrator.cpp
-        DetectorDriver.cpp
-        DetectorDriverXmlParser.cpp
-        DetectorLibrary.cpp
-        DetectorSummary.cpp
-        Globals.cpp
-        GlobalsXmlParser.cpp
-        MapNodeXmlParser.cpp
-        RawEvent.cpp
-        TimingCalibrator.cpp
-        TimingMapBuilder.cpp
-        UtkScanInterface.cpp
-        UtkUnpacker.cpp
-        WalkCorrector.cpp)
+set(CORE_SOURCES BarBuilder.cpp Calibrator.cpp DetectorDriver.cpp DetectorDriverXmlParser.cpp DetectorLibrary.cpp
+        DetectorSummary.cpp Globals.cpp GlobalsXmlParser.cpp MapNodeXmlParser.cpp RawEvent.cpp TimingCalibrator.cpp
+        TimingMapBuilder.cpp UtkScanInterface.cpp UtkUnpacker.cpp WalkCorrector.cpp)
 
-set(CORRELATION_SOURCES
-        Correlator.cpp
-        PlaceBuilder.cpp
-        Places.cpp
-        TreeCorrelator.cpp
-        TreeCorrelatorXmlParser.cpp)
+set(CORRELATION_SOURCES Correlator.cpp PlaceBuilder.cpp Places.cpp TreeCorrelator.cpp TreeCorrelatorXmlParser.cpp)
 
-set(PLOTTING_SOURCES
-        Plots.cpp
-        PlotsRegister.cpp
-        RootHandler.cpp)
+set(PLOTTING_SOURCES Plots.cpp PlotsRegister.cpp RootHandler.cpp)
 
 if (NOT PAASS_USE_HRIBF)
     set(MAIN_SOURCES utkscan.cpp)
